--- a/credit_risk_ensemble.ipynb
+++ b/credit_risk_ensemble.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,16 +24,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: imblearn in c:\\anaconda\\envs\\mlenv\\lib\\site-packages (0.0)\n",
+      "Requirement already satisfied: imbalanced-learn in c:\\anaconda\\envs\\mlenv\\lib\\site-packages (from imblearn) (0.8.1)\n",
+      "Requirement already satisfied: scipy>=0.19.1 in c:\\anaconda\\envs\\mlenv\\lib\\site-packages (from imbalanced-learn->imblearn) (1.7.3)\n",
+      "Requirement already satisfied: joblib>=0.11 in c:\\anaconda\\envs\\mlenv\\lib\\site-packages (from imbalanced-learn->imblearn) (1.1.0)\n",
+      "Requirement already satisfied: scikit-learn>=0.24 in c:\\users\\jay patel\\appdata\\roaming\\python\\python39\\site-packages (from imbalanced-learn->imblearn) (1.0rc2)\n",
+      "Requirement already satisfied: numpy>=1.13.3 in c:\\anaconda\\envs\\mlenv\\lib\\site-packages (from imbalanced-learn->imblearn) (1.21.2)\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in c:\\anaconda\\envs\\mlenv\\lib\\site-packages (from scikit-learn>=0.24->imbalanced-learn->imblearn) (3.0.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install imblearn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.metrics import balanced_accuracy_score\n",
     "from sklearn.metrics import confusion_matrix\n",
-    "from imblearn.metrics import classification_report_imbalanced\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "from imblearn.metrics import classification_report_imbalanced"
    ]
   },
   {
@@ -45,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +317,7 @@
        "[5 rows x 86 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -662,7 +686,7 @@
        "[8 rows x 95 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -673,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -684,7 +708,7 @@
        "Name: loan_status, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -696,16 +720,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(51612, 95)"
+       "Counter({'loan_status': 1})"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -713,7 +737,8 @@
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=1)\n",
-    "X_train.shape"
+    "X_train.shape\n",
+    "Counter(y_train)"
    ]
   },
   {
@@ -742,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -756,14 +781,14 @@
    "source": [
     "# Resample the training data with the BalancedRandomForestClassifier\n",
     "from imblearn.ensemble import BalancedRandomForestClassifier\n",
-    "model = BalancedRandomForestClassifier(random_state=1)\n",
+    "model = BalancedRandomForestClassifier(n_estimators=100, random_state=1)\n",
     "model = model.fit(X_train, y_train)\n",
     "print(model)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -772,7 +797,7 @@
        "0.7885466545953005"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -785,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -795,7 +820,7 @@
        "       [ 2153, 14951]], dtype=int64)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -809,7 +834,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Predicted high_risk</th>\n",
+       "      <th>Predicted low_risk</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Actual high_risk</th>\n",
+       "      <td>71</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Actual low_risk</th>\n",
+       "      <td>2153</td>\n",
+       "      <td>14951</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  Predicted high_risk  Predicted low_risk\n",
+       "Actual high_risk                   71                  30\n",
+       "Actual low_risk                  2153               14951"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculating the confusion matrix\n",
+    "cm = confusion_matrix(y_test, y_pred)\n",
+    "\n",
+    "# Create a DataFrame from the confusion matrix.\n",
+    "cm_df = pd.DataFrame(\n",
+    "    cm, index=[\"Actual high_risk\", \"Actual low_risk\"], columns=[\"Predicted high_risk\", \"Predicted low_risk\"])\n",
+    "cm_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -833,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -894,7 +985,7 @@
        "last_pymnt_amnt    0.050033"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -916,26 +1007,51 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'ntpath' from 'C:\\\\anaconda\\\\envs\\\\mlenv\\\\lib\\\\ntpath.py'>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "os.path"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Train the EasyEnsembleClassifier\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X,\n",
-    "   y, random_state=1, stratify=y)"
+    "from imblearn.ensemble import EasyEnsembleClassifier"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EasyEnsembleClassifier(n_estimators=100, random_state=1)\n"
+     ]
+    }
+   ],
    "source": [
-    "from sklearn.linear_model import LogisticRegression\n",
-    "classifier = LogisticRegression(solver='lbfgs',\n",
-    "   max_iter=200,\n",
-    "   random_state=1)"
+    "eec = EasyEnsembleClassifier(n_estimators=100, random_state=1)\n",
+    "print(eec)"
    ]
   },
   {
@@ -944,52 +1060,53 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EasyEnsembleClassifier(n_estimators=100, random_state=1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = eec.fit(X_train, y_train)\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
       "text/plain": [
-       "LogisticRegression(max_iter=200, random_state=1)"
+       "0.9316600714093861"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "classifier.fit(X_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.8673060156931125\n"
-     ]
-    }
-   ],
-   "source": [
     "# Calculated the balanced accuracy score\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "print(accuracy_score(y_test, y_pred))"
+    "y_pred = eec.predict(X_test)\n",
+    "balanced_accuracy_score(y_test, y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[   79,     8],\n",
-       "       [ 2142, 14976]], dtype=int64)"
+       "array([[   71,    30],\n",
+       "       [ 2153, 14951]], dtype=int64)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1003,7 +1120,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Predicted high_risk</th>\n",
+       "      <th>Predicted low_risk</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Actual high_risk</th>\n",
+       "      <td>71</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Actual low_risk</th>\n",
+       "      <td>2153</td>\n",
+       "      <td>14951</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  Predicted high_risk  Predicted low_risk\n",
+       "Actual high_risk                   71                  30\n",
+       "Actual low_risk                  2153               14951"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculating the confusion matrix\n",
+    "cm = confusion_matrix(y_test, y_pred)\n",
+    "\n",
+    "# Create a DataFrame from the confusion matrix.\n",
+    "cm_df = pd.DataFrame(\n",
+    "    cm, index=[\"Actual high_risk\", \"Actual low_risk\"], columns=[\"Predicted high_risk\", \"Predicted low_risk\"])\n",
+    "cm_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1012,10 +1195,10 @@
      "text": [
       "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
-      "  high_risk       0.04      0.91      0.87      0.07      0.89      0.80        87\n",
-      "   low_risk       1.00      0.87      0.91      0.93      0.89      0.79     17118\n",
+      "  high_risk       0.03      0.70      0.87      0.06      0.78      0.60       101\n",
+      "   low_risk       1.00      0.87      0.70      0.93      0.78      0.62     17104\n",
       "\n",
-      "avg / total       0.99      0.88      0.91      0.93      0.89      0.79     17205\n",
+      "avg / total       0.99      0.87      0.70      0.93      0.78      0.62     17205\n",
       "\n"
      ]
     }
@@ -1050,7 +1233,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
