updated README and credit_risk_ensemble

--- a/credit_risk_ensemble.ipynb
+++ b/credit_risk_ensemble.ipynb
@@ -1096,17 +1096,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[   71,    30],\n",
-       "       [ 2153, 14951]], dtype=int64)"
+       "array([[   93,     8],\n",
+       "       [  983, 16121]], dtype=int64)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1114,13 +1114,13 @@
    "source": [
     "# Display the confusion matrix\n",
     "from sklearn.metrics import confusion_matrix\n",
-    "y_pred = model.predict(X_test)\n",
+    "y_pred = eec.predict(X_test)\n",
     "confusion_matrix(y_test, y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1151,13 +1151,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Actual high_risk</th>\n",
-       "      <td>71</td>\n",
-       "      <td>30</td>\n",
+       "      <td>93</td>\n",
+       "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Actual low_risk</th>\n",
-       "      <td>2153</td>\n",
-       "      <td>14951</td>\n",
+       "      <td>983</td>\n",
+       "      <td>16121</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1165,11 +1165,11 @@
       ],
       "text/plain": [
        "                  Predicted high_risk  Predicted low_risk\n",
-       "Actual high_risk                   71                  30\n",
-       "Actual low_risk                  2153               14951"
+       "Actual high_risk                   93                   8\n",
+       "Actual low_risk                   983               16121"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
